[tool.poetry]
name = "dots-and-lines"
version = "0.1.0"
description = ""
authors = ["Bingzhen Jiang <91638303+carrottoo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyglet = "^2.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
